Import of KWILLIAMS/Module-Build-0.22 from CPAN.
gitpan-cpan-distribution: Module-Build
gitpan-cpan-version:      0.22
gitpan-cpan-path:         KWILLIAMS/Module-Build-0.22.tar.gz
gitpan-cpan-author:       KWILLIAMS
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -443,19 +443,21 @@ METHODS
              );
 
         dist_author
-            This should be something like "John Doe <jdoe@example.com>".
-            This is used when creating PPD files. If this is not specified,
-            then "Module::Build" looks at the module from which it gets the
-            distribution's version. If it finds a POD section marked "=head1
-            AUTHOR", then it uses the contents of this section.
+            This should be something like "John Doe <jdoe@example.com>", or
+            if there are multiple authors, an anonymous array of strings may
+            be specified. This is used when generating metadata for META.yml
+            and PPD files. If this is not specified, then "Module::Build"
+            looks at the module from which it gets the distribution's
+            version. If it finds a POD section marked "=head1 AUTHOR", then
+            it uses the contents of this section.
 
         dist_abstract
             This should be a short description of the distribution. This is
-            used when creating PPD files. If it is not given then
-            "Module::Build" looks in the POD of the module from which it
-            gets the distribution's version. It looks for the first line
-            matching "$package\s-\s(.+)", and uses the captured text as the
-            abstract.
+            used when generating metadata for META.yml and PPD files. If it
+            is not given then "Module::Build" looks in the POD of the module
+            from which it gets the distribution's version. It looks for the
+            first line matching "$package\s-\s(.+)", and uses the captured
+            text as the abstract.
 
     subclass()
         This creates a new "Module::Build" subclass on the fly, as described
